code/objects/MogliSMS_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Active_Form_Instance_Status__c</fullName>
        <label>Active Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AttachmentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Form_Instance_Status__c</fullName>
        <defaultValue>&quot;Complete&quot;</defaultValue>
        <description>This is the status the Form__c records will be updated to when a new form is created with the value in the &quot;Active&quot; Status</description>
        <inlineHelpText>This is the status the Form__c records will be updated to when a new form is created with the value in the &quot;Active&quot; Status</inlineHelpText>
        <label>Complete Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMergeFields__c</fullName>
        <description>Enter additional fields that maybe used for Contact field merge on the SMS object</description>
        <inlineHelpText>Enter additional fields that maybe used for Contact field merge on the SMS object</inlineHelpText>
        <label>Contact Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked the ContactTrigger will fire</description>
        <inlineHelpText>If this field is checked the ContactTrigger will fire</inlineHelpText>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Anonymous_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Anonymous Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomSMSServiceHandler__c</fullName>
        <label>CustomSMSServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomWebServiceHandler__c</fullName>
        <label>CustomWebServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked the FormTrigger will fire</description>
        <inlineHelpText>If this field is checked the FormTrigger will fire</inlineHelpText>
        <label>FormTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <defaultValue>&quot;TWILIO&quot;</defaultValue>
        <label>Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadMergeFields__c</fullName>
        <description>Enter additional fields that maybe used for Lead field merge on the SMS object</description>
        <inlineHelpText>Enter additional fields that maybe used for Lead field merge on the SMS object</inlineHelpText>
        <label>Lead Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked, the lead trigger will fire</description>
        <inlineHelpText>If this field is checked, the lead trigger will fire</inlineHelpText>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PossibleAnswerDelimiter__c</fullName>
        <defaultValue>&quot;:::&quot;</defaultValue>
        <description>This is the string delimiter that should be at the end of each possible answer in the PossibleAnswer__c.PossibleText__c field.</description>
        <inlineHelpText>This is the string delimiter that should be at the end of each possible answer in the PossibleAnswer__c.PossibleText__c field.</inlineHelpText>
        <label>Possible Answer Delimiter</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked the SMSTrigger will fire</description>
        <inlineHelpText>If this field is checked the SMSTrigger will fire</inlineHelpText>
        <label>SMSTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TelerivetAPIKey__c</fullName>
        <label>TelerivetAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelerivetPhoneId__c</fullName>
        <label>TelerivetPhoneId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelerivetProjectID__c</fullName>
        <label>TelerivetProjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelerivetSecret__c</fullName>
        <label>TelerivetSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioAccountSid__c</fullName>
        <label>TwilioAccountSid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioAuthToken__c</fullName>
        <label>TwilioAuthToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioPhone__c</fullName>
        <label>TwilioPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MogliSMS Settings</label>
    <pluralLabel>MogliSMS Settings</pluralLabel>
</CustomObject>